force-app/main/default/objects/Parent_Category__c/Parent_Category__c.object-meta.xml
<CustomObject>
    <label>Parent Category</label>
    <nameField>
        <label>Parent Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>