force-app/main/default/objects/Parent_Category__c/fields/Child_Category__c.field-meta.xml
<CustomField>
    <fullName>Child_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Parent Categories</relationshipLabel>
    <relationshipName>Parent_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>