force-app/main/default/objects/Parent_Category__c/fields/Parent_Category_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Category Id</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Parent Categories (Parent Category Id)</relationshipLabel>
    <relationshipName>Parent_Categories1</relationshipName>
    <type>Lookup</type>
</CustomField>