force-app/main/default/objects/Parent_Category__c/validationRules/YODA_Parent_Category_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Parent_Category_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( IsBLANK( Child_Category__c  ),
IsBLANK( Parent_Category_Id__c ) )</errorConditionFormula>
    <errorMessage>Either Child Category ID or Parent Category ID is mandatory</errorMessage>
</ValidationRule>